[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/gui_components/page_panels/ItemPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/UI/panel.png" type="Texture" id=2]
[ext_resource path="res://scenes/gui_components/page_panels/BuyItemSlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui_themes/themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/buy_screen/BuySyrupPage.gd" type="Script" id=5]
[ext_resource path="res://scripts/buy_screen/BuyOneButton.gd" type="Script" id=6]
[ext_resource path="res://scripts/buy_screen/BuyMultipleButton.gd" type="Script" id=7]

[node name="BuySyrupPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="ItemPanel" parent="." instance=ExtResource( 1 )]
margin_top = -195.0
margin_bottom = 0.0

[node name="BuyPanel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -195.0
margin_right = 309.0
margin_bottom = 202.0
texture = ExtResource( 2 )
patch_margin_left = 25
patch_margin_top = 25
patch_margin_right = 25
patch_margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="BuyPanel"]
margin_right = 12.0
margin_bottom = 12.0

[node name="VBoxContainer" type="VBoxContainer" parent="BuyPanel/ScrollContainer"]
margin_right = 50.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyItemSlot" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 50.0

[node name="BuyItemSlot2" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 64.0
margin_right = 50.0
margin_bottom = 124.0

[node name="BuyItemSlot3" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 128.0
margin_right = 50.0
margin_bottom = 188.0

[node name="BuyItemSlot4" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 192.0
margin_right = 50.0
margin_bottom = 252.0

[node name="BuyItemSlot5" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 256.0
margin_right = 50.0
margin_bottom = 316.0

[node name="BuyItemSlot6" parent="BuyPanel/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 320.0
margin_right = 50.0
margin_bottom = 380.0

[node name="BuyOneButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -319.0
margin_top = 6.0
margin_right = -19.0
margin_bottom = 55.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuyOneButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BUY 1"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyMultipleButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = 62.0
margin_right = -19.0
margin_bottom = 111.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="BuyMultipleButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -18.5
margin_right = -10.0
margin_bottom = 19.5
min_value = 1.0
value = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BuyMultipleButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "BUY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BuyOneButton" to="BuyOneButton" method="_on_BuyOneButton_pressed"]
[connection signal="pressed" from="BuyMultipleButton" to="BuyMultipleButton" method="_on_BuyMultipleButton_pressed"]
